--- a/erpnext/crm/doctype/appointment/appointment.json
+++ b/erpnext/crm/doctype/appointment/appointment.json
@@ -462,9 +462,11 @@
    "read_only": 1
   },
   {
+   "collapsible": 1,
+   "collapsible_depends_on": "secondary_contact_person",
    "fieldname": "secondary_contact_section",
    "fieldtype": "Section Break",
-   "label": "Secondary Contact Info"
+   "label": "Secondary Contact"
   },
   {
    "allow_on_submit": 1,
@@ -484,7 +486,7 @@
    "allow_on_submit": 1,
    "fieldname": "secondary_contact_mobile",
    "fieldtype": "Select",
-   "label": "Secondary Mobile No (Primary)"
+   "label": "Secondary Mobile No"
   },
   {
    "fieldname": "column_break_secondary_contact_person",
@@ -496,7 +498,7 @@
   }
  ],
  "is_submittable": 1,
- "modified": "2022-08-26 14:41:32.925474",
+ "modified": "2022-08-29 13:06:16.032627",
  "modified_by": "Administrator",
  "module": "CRM",
  "name": "Appointment",
