--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -26,7 +26,7 @@ erpnext/payroll                 @ruchamahabal
 erpnext/projects/               @ruchamahabal
 
 erpnext/controllers             @deepeshgarg007 @nextchamp-saqib @rohitwaghchaure @marination
-erpnext/patches/                @deepeshgarg007 @nextchamp-saqib @marination rohitwaghchaure
+erpnext/patches/                @deepeshgarg007 @nextchamp-saqib @rohitwaghchaure
 erpnext/public/                 @nextchamp-saqib @marination
 
 .github/                        @ankush
