--- a/erpnext/vehicles/doctype/project_panel_detail/project_panel_detail.json
+++ b/erpnext/vehicles/doctype/project_panel_detail/project_panel_detail.json
@@ -37,6 +37,8 @@
   {
    "columns": 1,
    "default": "1",
+   "fetch_from": "vehicle_panel.default_qty",
+   "fetch_if_empty": 1,
    "fieldname": "qty",
    "fieldtype": "Float",
    "in_list_view": 1,
@@ -44,7 +46,7 @@
   }
  ],
  "istable": 1,
- "modified": "2022-10-19 17:15:16.246667",
+ "modified": "2022-10-20 16:49:32.330012",
  "modified_by": "Administrator",
  "module": "Vehicles",
  "name": "Project Panel Detail",
