--- a/erpnext/vehicles/doctype/project_panel_detail/project_panel_detail.json
+++ b/erpnext/vehicles/doctype/project_panel_detail/project_panel_detail.json
@@ -23,8 +23,7 @@
    "fieldtype": "Link",
    "in_list_view": 1,
    "label": "Vehicle Panel Side",
-   "options": "Vehicle Panel Side",
-   "reqd": 1
+   "options": "Vehicle Panel Side"
   },
   {
    "fieldname": "vehicle_panel_job",
@@ -46,7 +45,7 @@
   }
  ],
  "istable": 1,
- "modified": "2022-10-21 13:14:07.415568",
+ "modified": "2022-10-27 12:19:26.559422",
  "modified_by": "Administrator",
  "module": "Vehicles",
  "name": "Project Panel Detail",
