--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "description": "Open Source ERP System powered by the Frappe Framework",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/frappe/erpnext.git"
+    "url": "git+https://github.com/jrGabrillo/erpnext.git"
   },
   "homepage": "https://erpnext.com",
   "author": "Frappe Technologies Pvt. Ltd.",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/frappe/erpnext/issues"
+    "url": "https://github.com/jrGabrillo/erpnext/issues"
   },
   "devDependencies": {},
   "dependencies": {
