--- a/erpnext/crm/doctype/appointment/appointment.json
+++ b/erpnext/crm/doctype/appointment/appointment.json
@@ -28,6 +28,7 @@
   "sec_applies_to",
   "applies_to_variant_of",
   "applies_to_variant_of_name",
+  "applies_to_serial_no",
   "applies_to_item",
   "col_break_applies_to",
   "applies_to_item_name",
@@ -512,10 +513,16 @@
    "fieldname": "remarks",
    "fieldtype": "Small Text",
    "label": "Remarks"
+  },
+  {
+   "fieldname": "applies_to_serial_no",
+   "fieldtype": "Link",
+   "label": "Applies to Serial No",
+   "options": "Serial No"
   }
  ],
  "is_submittable": 1,
- "modified": "2022-11-08 17:22:47.609656",
+ "modified": "2022-12-19 13:25:04.187122",
  "modified_by": "Administrator",
  "module": "CRM",
  "name": "Appointment",
