--- a/erpnext/projects/doctype/project/project.json
+++ b/erpnext/projects/doctype/project/project.json
@@ -33,6 +33,7 @@
   "sec_applies_to",
   "applies_to_variant_of",
   "applies_to_variant_of_name",
+  "applies_to_serial_no",
   "applies_to_item",
   "col_break_applies_to",
   "applies_to_item_name",
@@ -1240,12 +1241,18 @@
   {
    "fieldname": "column_break_secondary_contact_display",
    "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "applies_to_serial_no",
+   "fieldtype": "Link",
+   "label": "Applies to Serial No",
+   "options": "Serial No"
   }
  ],
  "icon": "fa fa-puzzle-piece",
  "idx": 29,
  "image_field": "image",
- "modified": "2022-12-02 18:36:01.240518",
+ "modified": "2022-12-19 15:10:33.152786",
  "modified_by": "Administrator",
  "module": "Projects",
  "name": "Project",
