--- a/erpnext/accounts/doctype/accounts_settings/accounts_settings.json
+++ b/erpnext/accounts/doctype/accounts_settings/accounts_settings.json
@@ -276,7 +276,7 @@
  "icon": "icon-cog",
  "idx": 1,
  "issingle": 1,
- "modified": "2022-08-31 16:44:47.004691",
+ "modified": "2022-12-26 12:22:37.618218",
  "modified_by": "Administrator",
  "module": "Accounts",
  "name": "Accounts Settings",
@@ -287,17 +287,18 @@
    "email": 1,
    "print": 1,
    "read": 1,
-   "role": "Accounts Manager",
+   "role": "System Manager",
    "share": 1,
    "write": 1
   },
   {
+   "create": 1,
+   "email": 1,
+   "print": 1,
    "read": 1,
-   "role": "Sales User"
-  },
-  {
-   "read": 1,
-   "role": "Purchase User"
+   "role": "Accounts Manager",
+   "share": 1,
+   "write": 1
   }
  ],
  "quick_entry": 1,
