--- a/erpnext/erpnext_integrations/doctype/fbr_pos_settings/fbr_pos_settings.json
+++ b/erpnext/erpnext_integrations/doctype/fbr_pos_settings/fbr_pos_settings.json
@@ -51,7 +51,7 @@
   }
  ],
  "issingle": 1,
- "modified": "2022-02-21 00:41:02.675754",
+ "modified": "2022-12-26 12:13:00.197851",
  "modified_by": "Administrator",
  "module": "ERPNext Integrations",
  "name": "FBR POS Settings",
@@ -59,7 +59,6 @@
  "permissions": [
   {
    "create": 1,
-   "delete": 1,
    "email": 1,
    "print": 1,
    "read": 1,
@@ -68,14 +67,11 @@
    "write": 1
   },
   {
-   "create": 1,
-   "delete": 1,
    "email": 1,
    "print": 1,
    "read": 1,
    "role": "Accounts Manager",
-   "share": 1,
-   "write": 1
+   "share": 1
   }
  ],
  "sort_field": "modified",
