--- a/erpnext/buying/doctype/buying_settings/buying_settings.json
+++ b/erpnext/buying/doctype/buying_settings/buying_settings.json
@@ -100,20 +100,24 @@
  "icon": "fa fa-cog",
  "idx": 1,
  "issingle": 1,
- "modified": "2021-01-25 12:15:34.361989",
+ "modified": "2022-12-26 19:00:47.952638",
  "modified_by": "Administrator",
  "module": "Buying",
  "name": "Buying Settings",
  "owner": "Administrator",
  "permissions": [
   {
+   "create": 1,
    "read": 1,
-   "role": "System Manager"
+   "role": "System Manager",
+   "write": 1
   },
   {
+   "create": 1,
    "export": 1,
    "read": 1,
-   "role": "Purchase User"
+   "role": "Purchase Manager",
+   "write": 1
   }
  ],
  "sort_field": "modified",
