--- a/erpnext/budget/doctype/budget_reappropiation/budget_reappropiation.json
+++ b/erpnext/budget/doctype/budget_reappropiation/budget_reappropiation.json
@@ -19,7 +19,12 @@
   "remark",
   "section_break_10",
   "items",
-  "amended_from"
+  "amended_from",
+  "approver_details_section",
+  "approver",
+  "column_break_16",
+  "approver_name",
+  "approver_designation"
  ],
  "fields": [
   {
@@ -115,12 +120,40 @@
    "fieldtype": "Date",
    "label": "Appropriation Date",
    "reqd": 1
+  },
+  {
+   "fieldname": "approver_details_section",
+   "fieldtype": "Section Break",
+   "label": "Approver Details"
+  },
+  {
+   "fieldname": "approver",
+   "fieldtype": "Link",
+   "label": "Approver",
+   "options": "User",
+   "read_only": 1
+  },
+  {
+   "fieldname": "column_break_16",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "approver_name",
+   "fieldtype": "Data",
+   "label": "Approver Name",
+   "read_only": 1
+  },
+  {
+   "fieldname": "approver_designation",
+   "fieldtype": "Data",
+   "label": "Approver Designation",
+   "read_only": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "is_submittable": 1,
  "links": [],
- "modified": "2022-10-13 17:54:13.719231",
+ "modified": "2022-12-22 11:09:54.500900",
  "modified_by": "Administrator",
  "module": "Budget",
  "name": "Budget Reappropiation",
@@ -136,6 +169,28 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Accounts User",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Budget User",
    "share": 1,
    "write": 1
   }
