chore: update modified timestamp

--- a/erpnext/crm/doctype/appointment/appointment.json
+++ b/erpnext/crm/doctype/appointment/appointment.json
@@ -534,7 +534,8 @@
  ],
  "is_calendar_and_gantt": 1,
  "is_submittable": 1,
- "modified": "2022-12-21 15:32:27.959398",
+ "links": [],
+ "modified": "2023-01-02 15:18:27.290996",
  "modified_by": "Administrator",
  "module": "CRM",
  "name": "Appointment",
