--- a/erpnext/budget/doctype/budget_reappropiation_detail/budget_reappropiation_detail.json
+++ b/erpnext/budget/doctype/budget_reappropiation_detail/budget_reappropiation_detail.json
@@ -7,9 +7,11 @@
  "engine": "InnoDB",
  "field_order": [
   "from_account",
+  "from_account_number",
   "column_break_2",
   "to_account",
-  "amount"
+  "amount",
+  "to_account_number"
  ],
  "fields": [
   {
@@ -39,12 +41,26 @@
   {
    "fieldname": "column_break_2",
    "fieldtype": "Column Break"
+  },
+  {
+   "fetch_from": "from_account.account_number",
+   "fieldname": "from_account_number",
+   "fieldtype": "Data",
+   "label": "From Account Number",
+   "read_only": 1
+  },
+  {
+   "fetch_from": "to_account.account_number",
+   "fieldname": "to_account_number",
+   "fieldtype": "Data",
+   "label": "To Account Number",
+   "read_only": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2022-09-11 10:01:43.186316",
+ "modified": "2023-01-03 15:50:55.705507",
  "modified_by": "Administrator",
  "module": "Budget",
  "name": "Budget Reappropiation Detail",
